# lyra

./: .gitignore  OpenSoundcoreWindows.slnx  README.md
.github/workflows/: release.yml
OpenSoundcoreWindows/: AboutPage.xaml  AboutPage.xaml.cs  App.xaml  App.xaml.cs  AutoConnect.xaml  AutoConnect.xaml.cs  ConnectPage.xaml  ConnectPage.xaml.cs  DevicePage.xaml  DevicePage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenScq30Native.cs  OpenSoundcoreWindows.csproj  Package.appxmanifest  app.manifest
OpenSoundcoreWindows/Properties/: launchSettings.json
Package/: Package.appxmanifest  Package.wapproj
headphone-ffi/: Cargo.toml
headphone-ffi/.cargo/: config.toml
headphone-ffi/src/: lib.rs
